project/logs/20250611_161103log
use Adapater:NVIDIA GeForce RTX 4060 Laptop GPU

FeatrueLevel
complate crate D3D12Device!!!

Begin CompileShader,path:Object3d.VS.hlsl, profile:vs_6_0

Compile Succeeded, path:Object3d.VS.hlsl, profile:vs_6_0

Begin CompileShader,path:Object3d.PS.hlsl, profile:ps_6_0

Object3d.PS.hlsl:39:64: error: expected ')'
        float cos = saturate(dot(normalize(input.normal), 1.0f);
                                                               ^
Object3d.PS.hlsl:39:29: note: to match this '('
        float cos = saturate(dot(normalize(input.normal), 1.0f);
                            ^

